// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpenseSummary component renders with multiple expenses 1`] = `
<div>
  <div>
    <h3>
      Viewing 
      3
       
      expenses
       totalling 
      Rs. 1,27,362.74
    </h3>
  </div>
</div>
`;

exports[`ExpenseSummary component renders with single expense 1`] = `
<div>
  <div>
    <h3>
      Viewing 
      1
       
      expense
       totalling 
      Rs. 14,000.94
    </h3>
  </div>
</div>
`;
